--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             padding: 0;
             font-family: 'Pixelify Sans', sans-serif;
             text-align: center;
-            background: url('https://files.catbox.moe/8ydroo.jpg') no-repeat center center fixed;
+            background: url('https://files.catbox.moe/8st7ea.jpg') no-repeat center center fixed;
             background-size: cover;
             overflow: hidden;
         }
