--- a/index.html
+++ b/index.html
@@ -146,10 +146,10 @@
         </div>
         <div class="links">
             <a href="#">Telegram</a>
-            <a href="#">Twitter</a>
-            <a href="#">Pump.fun</a>
+            <a href="https://x.com/daria_inv">Twitter</a>
+            <a href="https://pump.fun/coin/6NuPTtotE1ygCdcmXtWoy4k1dYCgLT4tdZfkdxx6pump">Pump.fun</a>
         </div>
-        <div class="footer-text">CA: evskjdfhdskjgfPump</div>
+        <div class="footer-text">CA:6NuPTtotE1ygCdcmXtWoy4k1dYCgLT4tdZfkdxx6pump</div>
     </div>
 <script>
     document.addEventListener("DOMContentLoaded", function() {
