--- a/index.html
+++ b/index.html
@@ -145,11 +145,11 @@
             <img src="https://files.catbox.moe/dzqzw2.jpg" alt="DARIA">
         </div>
         <div class="links">
-            <a href="#">Telegram</a>
+            <a href="https://t.me/dariachatter">Telegram</a>
             <a href="https://x.com/daria_inv">Twitter</a>
-            <a href="https://pump.fun/coin/6NuPTtotE1ygCdcmXtWoy4k1dYCgLT4tdZfkdxx6pump">Pump.fun</a>
+            <a href="https://pump.fun/coin/">Pump.fun</a>
         </div>
-        <div class="footer-text">CA:6NuPTtotE1ygCdcmXtWoy4k1dYCgLT4tdZfkdxx6pump</div>
+        <div class="footer-text">CA:</div>
     </div>
 <script>
     document.addEventListener("DOMContentLoaded", function() {
@@ -174,7 +174,7 @@
             document.body.appendChild(overlay);
             
             setTimeout(() => {
-                window.location.href = "https://pump.fun/coin/6NuPTtotE1ygCdcmXtWoy4k1dYCgLT4tdZfkdxx6pump";
+                window.location.href = "https://pump.fun/coin/";
             }, 1500);
         });
     });
