--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
         }
         .gif-overlay-second {
             position: absolute;
-            top: -139px;
-            left: 63%;
+            top: -204px;
+            left: 65%;
             transform: translateX(-50%);
-            width: 96px;
+            width: 320px;
             height: auto;
         }
         .image-container {
@@ -118,7 +118,7 @@
     </style>
 </head>
 
-    <div style="position: absolute; top: calc(10% + 178px); left: calc(50% + 30px); z-index: 10; transform: translateX(-50%); font-size: 12px; font-weight: bold; color: black;">click to<br>feed me :D</div>
+    
     <div class="falling-leaves"></div>
     <script>
         document.addEventListener("DOMContentLoaded", function() {
@@ -138,7 +138,7 @@
     <div class="container">
         <div class="title-container">
             <img class="gif-overlay" src="https://media.giphy.com/media/igSlIstIIsZMYa4ohS/giphy.gif" alt="GIF Overlay">
-            <img class="gif-overlay-second" src="https://media.giphy.com/media/Q2Yw6EPUxR1CWVMpL5/giphy.gif" alt="Second GIF Overlay">
+            <img class="gif-overlay-second" src="https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExYTd6ZHN3aDljaDVibGE2cW56bHQzc2N2b3Vjem0zYTh2bGI1ems4aSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/WKWJlRgqGXTGL2K1DH/giphy.gif" alt="Second GIF Overlay">
             <div class="title">DARIA</div>
         </div>
         <div class="image-container">
