--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     <div class="container">
         <div class="title-container">
             <img class="gif-overlay" src="https://media.giphy.com/media/igSlIstIIsZMYa4ohS/giphy.gif" alt="GIF Overlay">
-            <img class="gif-overlay-second" src="https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExYTd6ZHN3aDljaDVibGE2cW56bHQzc2N2b3Vjem0zYTh2bGI1ems4aSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/WKWJlRgqGXTGL2K1DH/giphy.gif" alt="Second GIF Overlay">
+            <img class="gif-overlay-second" src="https://files.catbox.moe/79ocl8.gif" alt="Second GIF Overlay">
             <div class="title">DARIA</div>
         </div>
         <div class="image-container">
