--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             <a href="https://x.com/daria_inv">Twitter</a>
             <a href="https://pump.fun/coin/">Pump.fun</a>
         </div>
-        <div class="footer-text">CA:</div>
+        <div class="footer-text">CA: 7uAeJKeFNxU9J6R3iLVfQJ7PUfRqtkoFSevCN274pump</div>
     </div>
 <script>
     document.addEventListener("DOMContentLoaded", function() {
@@ -174,7 +174,7 @@
             document.body.appendChild(overlay);
             
             setTimeout(() => {
-                window.location.href = "https://pump.fun/coin/";
+                window.location.href = "https://pump.fun/coin/7uAeJKeFNxU9J6R3iLVfQJ7PUfRqtkoFSevCN274pump";
             }, 1500);
         });
     });
