--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <div class="links">
             <a href="https://t.me/dariachatter">Telegram</a>
             <a href="https://x.com/daria_inv">Twitter</a>
-            <a href="https://pump.fun/coin/">Pump.fun</a>
+            <a href="https://pump.fun/coin/7uAeJKeFNxU9J6R3iLVfQJ7PUfRqtkoFSevCN274pump">Pump.fun</a>
         </div>
         <div class="footer-text">CA: 7uAeJKeFNxU9J6R3iLVfQJ7PUfRqtkoFSevCN274pump</div>
     </div>
