--- a/index.html
+++ b/index.html
@@ -147,9 +147,9 @@
         <div class="links">
             <a href="https://t.me/dariachatter">Telegram</a>
             <a href="https://x.com/daria_inv">Twitter</a>
-            <a href="">Pump.fun</a>
+            <a href="https://pump.fun/coin/BY7SRiCrGN5zkkLrDE1cSFo7UPxnviW2XZiQNHM9pump">Pump.fun</a>
         </div>
-        <div class="footer-text">CA: </div>
+        <div class="footer-text">CA: BY7SRiCrGN5zkkLrDE1cSFo7UPxnviW2XZiQNHM9pump</div>
     </div>
 <script>
     document.addEventListener("DOMContentLoaded", function() {
@@ -174,7 +174,7 @@
             document.body.appendChild(overlay);
             
             setTimeout(() => {
-                window.location.href = "";
+                window.location.href = "https://pump.fun/coin/BY7SRiCrGN5zkkLrDE1cSFo7UPxnviW2XZiQNHM9pump";
             }, 1500);
         });
     });
